--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Webpack Starter Kit</title>
-
-    
+    <title>promisification</title>
   </head>
-
   <body>
     
   </body>
